Eevee, strange displacement in 3.5 #104637

Closed
opened 2023-02-11 22:42:42 +01:00 by Carlos · 1 comment

System Information
Operating system: Linux-6.0.19-3-MANJARO-x86_64-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.85.05

Blender Version
Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-11 00:13, hash: rB343bb4a5a3fc
Worked: 3.4

Short description of error
The displacement behaves different in the latest 3.5 built

image
image

Exact steps for others to reproduce the error

  1. New file
  2. Create a material and asign a dislacement texure

Thank you

**System Information** Operating system: Linux-6.0.19-3-MANJARO-x86_64-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.85.05 **Blender Version** Broken: version: 3.5.0 Alpha, branch: main, commit date: 2023-02-11 00:13, hash: `rB343bb4a5a3fc` Worked: 3.4 **Short description of error** The displacement behaves different in the latest 3.5 built ![image](/attachments/883a827e-45e3-4ea9-b140-606c920f217d) ![image](/attachments/fe322731-2ca2-4c8d-a5cd-a9d4cd6bbf6b) **Exact steps for others to reproduce the error** 1. New file 2. Create a material and asign a dislacement texure Thank you
Carlos added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-11 22:42:43 +01:00

@pragma37 Looks like this was caused by efabe81c91

@pragma37 Looks like this was caused by efabe81c916
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-12 23:29:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104637
No description provided.