source/blender/gpu/intern/gpu_node_graph.cc
@@ -149,7 +149,7 @@ static void gpu_node_input_link(GPUNode *node, GPUNodeLink *link, const eGPUType
     case GPU_NODE_LINK_DIFFERENTIATE_FLOAT_FN:
       input->source = GPU_SOURCE_FUNCTION_CALL;
       /* NOTE(@fclem): End of function call is the return variable set during codegen. */
-      SNPRINTF(input->function_call, "dF_branch(%s(), ", link->function_name);
+      SNPRINTF(input->function_call, "dF_branch_incomplete(%s(), ", link->function_name);
       break;
     default:
       break;
